--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,56 +1,7 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<fragment
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:name="com.davidiserovich.cryptms.SendMessageFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
-
-    <TextView
-        android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
-
-    <EditText
-        android:id="@+id/recipient"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_alignRight="@+id/send_button"
-        android:layout_below="@+id/textView1"
-        android:hint="@string/phone_number_hint"
-        android:ems="10"
-        android:inputType="phone" >
-        
-        <requestFocus />
-    </EditText>
-    
-    <EditText
-        android:id="@+id/message"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/send_button"
-        android:layout_alignLeft="@+id/recipient"
-        android:layout_alignRight="@+id/recipient"
-        android:layout_below="@+id/recipient"
-        android:ems="10"
-        android:gravity="top"
-        android:hint="@string/message_hint"
-        android:inputType="textLongMessage" >
-
-     </EditText>
-    
-    <Button
-        android:id="@+id/send_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentLeft="true"
-        android:text="@string/send"
-        android:onClick="sendButtonClick" />
-
-</RelativeLayout>
+    android:id="@+id/sendsms_fragment" />
